#5 create user registration endpoint

--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ name = "pypi"
 [packages]
 fastapi = "==0.85.0"
 uvicorn = "==0.18.3"
+sqlalchemy = "*"
+passlib = "*"
+bcrypt = "*"
 
 [dev-packages]
 
