#11 containerize application with docker

--- a/.env_template
+++ b/.env_template
@@ -2,3 +2,8 @@ SECRET_KEY=super_secret_key
 ACCESS_TOKEN_EXPIRE_MINUTES_DEFAULT=60
 MIN_PASSWORD_LENGHT=1
 MAX_PASSWORD_LENGHT=200
+DATABASE_NAME=password_generator
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_HOST=db
+PORT=8000
